Added properties view counter

--- a/wp-content/themes/softuni-rent/assets/sass/master.scss
+++ b/wp-content/themes/softuni-rent/assets/sass/master.scss
@@ -52,6 +52,14 @@ a {
 	}
 }
 
+.property-views-count {
+	opacity: 0.5;
+	font-size:1.2rem;
+	border:1px solid gray;
+	padding: 0.5rem;
+	margin: 0.5rem;
+}
+
 .property-meta {
 	margin-bottom: 2em;
 }
