--- a/wp-content/themes/softuni-rent/assets/sass/master.scss
+++ b/wp-content/themes/softuni-rent/assets/sass/master.scss
@@ -60,6 +60,14 @@ a {
 	margin: 0.5rem;
 }
 
+.property-likes-count {
+	opacity: 0.5;
+	font-size:1.2rem;
+	border:1px solid gray;
+	padding: 0.5rem;
+	margin: 0.5rem;
+}
+
 .property-meta {
 	margin-bottom: 2em;
 }
